Fix messages scrolling behind chat bar

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -66,6 +66,10 @@ article.message {
   margin-bottom: 10px;
   margin-right: 40px;
 
+  &:last-child {
+    margin-bottom: 90px;
+  }
+
   .author {
     display: block;
     font-weight: bold;
